@@ -5,7 +5,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:8.8.0'
+    classpath 'com.android.tools.build:gradle:8.8.1'
   }
 }
 
